<resources>
    <string name="app_name">ICGroup</string>
    <string name="company_name">IC Group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <string name="inputLoginr">Введите телефон</string>
    <string name="inputPassr">Введите пароль</string>
    <string name="forgotPassr">Забыли пароль?</string>
    <string name="loginR">Войти в систему</string>
    <string name="sreda">22\nср</string>

    <string name="nameExample">Темирлан\nДаулетович</string>
    <string name="nameString">Темирлан Даулетович</string>
    <string name="positionExample">учредитель</string>
    <string name="datestring">24 Января 2018</string>
    <string name="datestringwithtime">24 Января 2018|22:04</string>
    <string name="datestringwithtimenoyear">24 Января|22:04</string>
    <string name="bigtext">You will need to have control over the font that is used in order to use this text.
Most texts will not be displayed correctly on Facebook, Twitter and Instagram, but you can use it perfectly on your own website or in a Word document.You will need to have control over the font that is used in order to use this text.
Most texts will not be displayed correctly on Facebook, Twitter and Instagram, but you can use it perfectly on your own website or in a Word document.</string>
    <string name="commentText">Комментарий: \n\nОсновная деятельность "Бойцовского клуба Титан" – является воспитание спортсменов и участие в спортивных мероприятиях. Ежедневно в стены клуба приходят и обучаются кикбоксингу молодые люди, подростки, дети получая школу техники, мужества, силы и благородства присущих этому прекрасному виду единоборств. Придя в зал, они начинают для себя новую жизнь, полную ярких впечатлений, азарта и огромного стремления познать свои возможности. Серые будни вдруг озаряются новыми интересами, жизненной энергией и прекрасным настроением. Сила, отличное телосложение, гибкость, быстрая реакция, уверенность</string>
    <string name="needed">Обязательно оставьте оценку проделанной работе прежде чем закрывать задачу.</string>
    <string name="periodUsing">Период пользования\n1шт./1 ОПУ на 1 месяц</string>
    <string name="title_activity_maps">Map</string>
    <string name="rusure">Вы уверены что хотите закрыть инвентаризацию?\nДействие будет неизменным</string>
</resources>
