<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/whiterow_page">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/infoLayout"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/datestring"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrowright"
            android:padding="7dp"
            android:background="@drawable/green_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            />
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >
            <ProgressBar
                android:id="@+id/ProgressBar"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:layout_width="match_parent"
                android:layout_height="15sp"
                android:layout_gravity="center"
                android:progress="60"

                android:progressDrawable="@drawable/horizontal_progress_percentage"
                android:secondaryProgress="100"
                style="?android:attr/progressBarStyleHorizontal"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            >
            <TextView
                android:id="@+id/PercentageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="55%"
                />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        >
            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:text="@string/nameString"
                />
        <TextView
            android:id="@+id/positionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:text="@string/positionExample"
            />
    </LinearLayout>
</LinearLayout>