<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AuthFragments.LoginFragment">
    <android.support.constraint.ConstraintLayout
        android:layout_marginRight="10sp"
        android:layout_marginLeft="10sp"

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/loginlabel"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:text="Вход в систему"
            app:layout_constraintTop_toTopOf="parent"
            />
        <LinearLayout
            android:id="@+id/loginLogin"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginRight="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/lightgrey_button"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/loginlabel"
            >
            <ImageView
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_login_login"/>
            <EditText
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/logintextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_weight="1"
                android:textColorHint="@color/darkgrey"
                android:textColor="@color/black"
                android:inputType="phone"
                android:hint="@string/inputLoginr"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_marginRight="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:orientation="horizontal"
            android:background="@drawable/lightgrey_button"
            app:layout_constraintTop_toBottomOf="@+id/loginLogin"
            android:layout_weight="1">

            <ImageView
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_login_pas" />
            <EditText
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="20dp"
                android:textColorHint="@color/darkgrey"
                android:textColor="@color/black"
                android:hint="@string/inputPassr"
                android:inputType="textPassword"/>


        </LinearLayout>
   <!--     <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"

            android:layout_weight="1">

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassr"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </android.support.constraint.ConstraintLayout> -->
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_biglogo"
            android:layout_marginBottom="15dp"
            />
        <android.support.constraint.ConstraintLayout
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_weight="1">
        <TextView
            android:id="@+id/loginSystemTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/loginR"
            />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="onClick"
        android:visibility="gone"
        android:id="@+id/progressLayout"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            />
    </FrameLayout>

</FrameLayout>