<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ObjectFragments.JalobaInfoFragment"
    android:orientation="vertical"
    android:background="@color/light_grey">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:onClick="onBackPressed"
            android:src="@drawable/ic_backarr"
            android:tag="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mainObjectTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Жалобы"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:onClick="openDrawerOn"
            android:src="@drawable/ic_menu_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <LinearLayout
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/whiterow_page"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:text="@string/datestring"
                />
            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                >
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/jalobaLabelTextView"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:text="Жалоба"
                        />
                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/jalobaInfoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:text="Качество услуг"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/senderLabelTextView"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:text="Отправитель"
                        />
                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/senderInfoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:text="Качество услуг"
                        />
                </LinearLayout>
            </LinearLayout> -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/userRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                >

            </android.support.v7.widget.RecyclerView>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/messageRecyclerView"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            </android.support.v7.widget.RecyclerView>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/radioRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                >
            </android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:text="Консультирование"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/acceptRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                >

            </android.support.v7.widget.RecyclerView>
            <android.support.constraint.ConstraintLayout
                android:id="@+id/makeAnswerLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/green_circle"
                android:padding="10dp"
                >
                <TextView
                    android:id="@+id/makeAnswerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="Ответить на жалобу"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                    android:id="@+id/makeAnswerPlusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="+"
                    android:textColor="@color/light_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    />
            </android.support.constraint.ConstraintLayout>
            <LinearLayout
                android:id="@+id/answerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_grey"
          />
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    >
                <TextView
                    android:id="@+id/jalobaAnswerLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:text="Ответ на жалобу"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <TextView
                    android:id="@+id/jalobaDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkgrey"
                    android:textSize="11sp"
                    android:text="@string/datestringwithtime"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                </android.support.constraint.ConstraintLayout>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                        <TextView
                            android:id="@+id/answerNameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="11sp"
                            android:text="@string/nameString"
                            />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkgrey"
                        android:textSize="11sp"
                        android:text="@string/positionExample"
                        />
                    <TextView
                        android:id="@+id/answerMessageTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:text="@string/commentText"
                        android:layout_marginTop="20dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>